src/frontend/htpl.output
Nonterminals useless in grammar

    or_expr
    or_list
    and_expr
    and_list
    binary


Terminals unused in grammar

    OR
    AND
    BIGGER
    LESS
    SAME
    PLUS
    MULT
    DIVIDE


Rules useless in grammar

   35 expr: or_expr

   36 or_expr: or_list

   37 or_list: or_list OR and_expr
   38        | and_expr

   39 and_expr: and_list

   40 and_list: and_list AND binary
   41         | binary

   42 binary: binary BIGGER binary
   43       | binary LESS binary
   44       | binary SAME binary
   45       | binary PLUS binary
   46       | binary MINUS binary
   47       | binary MULT binary
   48       | binary DIVIDE binary


State 10 conflicts: 1 reduce/reduce
State 17 conflicts: 1 reduce/reduce
State 28 conflicts: 1 reduce/reduce
State 29 conflicts: 1 reduce/reduce
State 55 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: DOCTYPE_TAG structure

    2 structure: html_open head body html_close

    3 html_open: COMMONTAG_OPEN_START HTML attribute_list TAG_END

    4 html_close: COMMONTAG_CLOSE_START HTML TAG_END

    5 head: head_open innerHTML head_close

    6 head_open: COMMONTAG_OPEN_START HEAD attribute_list TAG_END

    7 head_close: COMMONTAG_CLOSE_START HEAD TAG_END

    8 body: body_open innerHTML body_close

    9 body_open: COMMONTAG_OPEN_START BODY attribute_list TAG_END

   10 body_close: COMMONTAG_CLOSE_START BODY TAG_END

   11 attribute_list: attribute attribute_list
   12               | %empty

   13 attribute: ATTRIBUTE_NAME '=' ATTRIBUTE_VAL

   14 innerHTML: clause_list
   15          | expr

   16 clause_list: clause clause_list
   17            | %empty

   18 clause: common_tag
   19       | single_tag

   20 common_tag: common_tag_open innerHTML common_tag_close

   21 common_tag_open: COMMONTAG_OPEN_START TAG_NAME attribute_list TAG_END

   22 common_tag_close: COMMONTAG_CLOSE_START TAG_NAME TAG_END

   23 single_tag: SINGLETAG_START TAG_NAME attribute_list SINGLETAG_END

   24 expr: %empty
   25     | unary

   26 unary: p_open expr p_close
   27      | p_open unary p_close
   28      | NUMBER_CONST
   29      | STRING
   30      | single_tag
   31      | MINUS unary
   32      | NOT unary

   33 p_open: COMMONTAG_OPEN_START P attribute_list TAG_END

   34 p_close: COMMONTAG_CLOSE_START P TAG_END


Terminals, with rules where they appear

    $end (0) 0
    '=' (61) 13
    error (256)
    COMMONTAG_OPEN_START (258) 3 6 9 21 33
    COMMONTAG_CLOSE_START (259) 4 7 10 22 34
    SINGLETAG_START (260) 23
    SINGLETAG_END (261) 23
    TAG_END (262) 3 4 6 7 9 10 21 22 33 34
    DOCTYPE_TAG (263) 1
    HTML (264) 3 4
    HEAD (265) 6 7
    BODY (266) 9 10
    P (267) 33 34
    OR (268)
    AND (269)
    NOT (270) 32
    BIGGER (271)
    LESS (272)
    SAME (273)
    PLUS (274)
    MINUS (275) 31
    MULT (276)
    DIVIDE (277)
    NUMBER_CONST (278) 28
    TAG_NAME <stringVal> (279) 21 22 23
    ATTRIBUTE_NAME <stringVal> (280) 13
    ATTRIBUTE_VAL <stringVal> (281) 13
    STRING <stringVal> (282) 29


Nonterminals, with rules where they appear

    $accept (29)
        on left: 0
    program (30)
        on left: 1
        on right: 0
    structure (31)
        on left: 2
        on right: 1
    html_open (32)
        on left: 3
        on right: 2
    html_close (33)
        on left: 4
        on right: 2
    head (34)
        on left: 5
        on right: 2
    head_open (35)
        on left: 6
        on right: 5
    head_close (36)
        on left: 7
        on right: 5
    body (37)
        on left: 8
        on right: 2
    body_open (38)
        on left: 9
        on right: 8
    body_close (39)
        on left: 10
        on right: 8
    attribute_list (40)
        on left: 11 12
        on right: 3 6 9 11 21 23 33
    attribute (41)
        on left: 13
        on right: 11
    innerHTML (42)
        on left: 14 15
        on right: 5 8 20
    clause_list (43)
        on left: 16 17
        on right: 14 16
    clause (44)
        on left: 18 19
        on right: 16
    common_tag (45)
        on left: 20
        on right: 18
    common_tag_open (46)
        on left: 21
        on right: 20
    common_tag_close (47)
        on left: 22
        on right: 20
    single_tag (48)
        on left: 23
        on right: 19 30
    expr (49)
        on left: 24 25
        on right: 15 26
    unary (50)
        on left: 26 27 28 29 30 31 32
        on right: 25 27 31 32
    p_open (51)
        on left: 33
        on right: 26 27
    p_close (52)
        on left: 34
        on right: 26 27


State 0

    0 $accept: . program $end

    DOCTYPE_TAG  shift, and go to state 1

    program  go to state 2


State 1

    1 program: DOCTYPE_TAG . structure

    COMMONTAG_OPEN_START  shift, and go to state 3

    structure  go to state 4
    html_open  go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    3 html_open: COMMONTAG_OPEN_START . HTML attribute_list TAG_END

    HTML  shift, and go to state 7


State 4

    1 program: DOCTYPE_TAG structure .

    $default  reduce using rule 1 (program)


State 5

    2 structure: html_open . head body html_close

    COMMONTAG_OPEN_START  shift, and go to state 8

    head       go to state 9
    head_open  go to state 10


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 html_open: COMMONTAG_OPEN_START HTML . attribute_list TAG_END

    ATTRIBUTE_NAME  shift, and go to state 11

    $default  reduce using rule 12 (attribute_list)

    attribute_list  go to state 12
    attribute       go to state 13


State 8

    6 head_open: COMMONTAG_OPEN_START . HEAD attribute_list TAG_END

    HEAD  shift, and go to state 14


State 9

    2 structure: html_open head . body html_close

    COMMONTAG_OPEN_START  shift, and go to state 15

    body       go to state 16
    body_open  go to state 17


State 10

    5 head: head_open . innerHTML head_close

    COMMONTAG_OPEN_START  shift, and go to state 18
    SINGLETAG_START       shift, and go to state 19
    NOT                   shift, and go to state 20
    MINUS                 shift, and go to state 21
    NUMBER_CONST          shift, and go to state 22
    STRING                shift, and go to state 23

    COMMONTAG_CLOSE_START  reduce using rule 17 (clause_list)
    COMMONTAG_CLOSE_START  [reduce using rule 24 (expr)]
    $default               reduce using rule 17 (clause_list)

    innerHTML        go to state 24
    clause_list      go to state 25
    clause           go to state 26
    common_tag       go to state 27
    common_tag_open  go to state 28
    single_tag       go to state 29
    expr             go to state 30
    unary            go to state 31
    p_open           go to state 32


State 11

   13 attribute: ATTRIBUTE_NAME . '=' ATTRIBUTE_VAL

    '='  shift, and go to state 33


State 12

    3 html_open: COMMONTAG_OPEN_START HTML attribute_list . TAG_END

    TAG_END  shift, and go to state 34


State 13

   11 attribute_list: attribute . attribute_list

    ATTRIBUTE_NAME  shift, and go to state 11

    $default  reduce using rule 12 (attribute_list)

    attribute_list  go to state 35
    attribute       go to state 13


State 14

    6 head_open: COMMONTAG_OPEN_START HEAD . attribute_list TAG_END

    ATTRIBUTE_NAME  shift, and go to state 11

    $default  reduce using rule 12 (attribute_list)

    attribute_list  go to state 36
    attribute       go to state 13


State 15

    9 body_open: COMMONTAG_OPEN_START . BODY attribute_list TAG_END

    BODY  shift, and go to state 37


State 16

    2 structure: html_open head body . html_close

    COMMONTAG_CLOSE_START  shift, and go to state 38

    html_close  go to state 39


State 17

    8 body: body_open . innerHTML body_close

    COMMONTAG_OPEN_START  shift, and go to state 18
    SINGLETAG_START       shift, and go to state 19
    NOT                   shift, and go to state 20
    MINUS                 shift, and go to state 21
    NUMBER_CONST          shift, and go to state 22
    STRING                shift, and go to state 23

    COMMONTAG_CLOSE_START  reduce using rule 17 (clause_list)
    COMMONTAG_CLOSE_START  [reduce using rule 24 (expr)]
    $default               reduce using rule 17 (clause_list)

    innerHTML        go to state 40
    clause_list      go to state 25
    clause           go to state 26
    common_tag       go to state 27
    common_tag_open  go to state 28
    single_tag       go to state 29
    expr             go to state 30
    unary            go to state 31
    p_open           go to state 32


State 18

   21 common_tag_open: COMMONTAG_OPEN_START . TAG_NAME attribute_list TAG_END
   33 p_open: COMMONTAG_OPEN_START . P attribute_list TAG_END

    P         shift, and go to state 41
    TAG_NAME  shift, and go to state 42


State 19

   23 single_tag: SINGLETAG_START . TAG_NAME attribute_list SINGLETAG_END

    TAG_NAME  shift, and go to state 43


State 20

   32 unary: NOT . unary

    COMMONTAG_OPEN_START  shift, and go to state 44
    SINGLETAG_START       shift, and go to state 19
    NOT                   shift, and go to state 20
    MINUS                 shift, and go to state 21
    NUMBER_CONST          shift, and go to state 22
    STRING                shift, and go to state 23

    single_tag  go to state 45
    unary       go to state 46
    p_open      go to state 32


State 21

   31 unary: MINUS . unary

    COMMONTAG_OPEN_START  shift, and go to state 44
    SINGLETAG_START       shift, and go to state 19
    NOT                   shift, and go to state 20
    MINUS                 shift, and go to state 21
    NUMBER_CONST          shift, and go to state 22
    STRING                shift, and go to state 23

    single_tag  go to state 45
    unary       go to state 47
    p_open      go to state 32


State 22

   28 unary: NUMBER_CONST .

    $default  reduce using rule 28 (unary)


State 23

   29 unary: STRING .

    $default  reduce using rule 29 (unary)


State 24

    5 head: head_open innerHTML . head_close

    COMMONTAG_CLOSE_START  shift, and go to state 48

    head_close  go to state 49


State 25

   14 innerHTML: clause_list .

    $default  reduce using rule 14 (innerHTML)


State 26

   16 clause_list: clause . clause_list

    COMMONTAG_OPEN_START  shift, and go to state 50
    SINGLETAG_START       shift, and go to state 19

    $default  reduce using rule 17 (clause_list)

    clause_list      go to state 51
    clause           go to state 26
    common_tag       go to state 27
    common_tag_open  go to state 28
    single_tag       go to state 52


State 27

   18 clause: common_tag .

    $default  reduce using rule 18 (clause)


State 28

   20 common_tag: common_tag_open . innerHTML common_tag_close

    COMMONTAG_OPEN_START  shift, and go to state 18
    SINGLETAG_START       shift, and go to state 19
    NOT                   shift, and go to state 20
    MINUS                 shift, and go to state 21
    NUMBER_CONST          shift, and go to state 22
    STRING                shift, and go to state 23

    COMMONTAG_CLOSE_START  reduce using rule 17 (clause_list)
    COMMONTAG_CLOSE_START  [reduce using rule 24 (expr)]
    $default               reduce using rule 17 (clause_list)

    innerHTML        go to state 53
    clause_list      go to state 25
    clause           go to state 26
    common_tag       go to state 27
    common_tag_open  go to state 28
    single_tag       go to state 29
    expr             go to state 30
    unary            go to state 31
    p_open           go to state 32


State 29

   19 clause: single_tag .
   30 unary: single_tag .

    COMMONTAG_CLOSE_START  reduce using rule 19 (clause)
    COMMONTAG_CLOSE_START  [reduce using rule 30 (unary)]
    $default               reduce using rule 19 (clause)


State 30

   15 innerHTML: expr .

    $default  reduce using rule 15 (innerHTML)


State 31

   25 expr: unary .

    $default  reduce using rule 25 (expr)


State 32

   26 unary: p_open . expr p_close
   27      | p_open . unary p_close

    COMMONTAG_OPEN_START  shift, and go to state 44
    SINGLETAG_START       shift, and go to state 19
    NOT                   shift, and go to state 20
    MINUS                 shift, and go to state 21
    NUMBER_CONST          shift, and go to state 22
    STRING                shift, and go to state 23

    $default  reduce using rule 24 (expr)

    single_tag  go to state 45
    expr        go to state 54
    unary       go to state 55
    p_open      go to state 32


State 33

   13 attribute: ATTRIBUTE_NAME '=' . ATTRIBUTE_VAL

    ATTRIBUTE_VAL  shift, and go to state 56


State 34

    3 html_open: COMMONTAG_OPEN_START HTML attribute_list TAG_END .

    $default  reduce using rule 3 (html_open)


State 35

   11 attribute_list: attribute attribute_list .

    $default  reduce using rule 11 (attribute_list)


State 36

    6 head_open: COMMONTAG_OPEN_START HEAD attribute_list . TAG_END

    TAG_END  shift, and go to state 57


State 37

    9 body_open: COMMONTAG_OPEN_START BODY . attribute_list TAG_END

    ATTRIBUTE_NAME  shift, and go to state 11

    $default  reduce using rule 12 (attribute_list)

    attribute_list  go to state 58
    attribute       go to state 13


State 38

    4 html_close: COMMONTAG_CLOSE_START . HTML TAG_END

    HTML  shift, and go to state 59


State 39

    2 structure: html_open head body html_close .

    $default  reduce using rule 2 (structure)


State 40

    8 body: body_open innerHTML . body_close

    COMMONTAG_CLOSE_START  shift, and go to state 60

    body_close  go to state 61


State 41

   33 p_open: COMMONTAG_OPEN_START P . attribute_list TAG_END

    ATTRIBUTE_NAME  shift, and go to state 11

    $default  reduce using rule 12 (attribute_list)

    attribute_list  go to state 62
    attribute       go to state 13


State 42

   21 common_tag_open: COMMONTAG_OPEN_START TAG_NAME . attribute_list TAG_END

    ATTRIBUTE_NAME  shift, and go to state 11

    $default  reduce using rule 12 (attribute_list)

    attribute_list  go to state 63
    attribute       go to state 13


State 43

   23 single_tag: SINGLETAG_START TAG_NAME . attribute_list SINGLETAG_END

    ATTRIBUTE_NAME  shift, and go to state 11

    $default  reduce using rule 12 (attribute_list)

    attribute_list  go to state 64
    attribute       go to state 13


State 44

   33 p_open: COMMONTAG_OPEN_START . P attribute_list TAG_END

    P  shift, and go to state 41


State 45

   30 unary: single_tag .

    $default  reduce using rule 30 (unary)


State 46

   32 unary: NOT unary .

    $default  reduce using rule 32 (unary)


State 47

   31 unary: MINUS unary .

    $default  reduce using rule 31 (unary)


State 48

    7 head_close: COMMONTAG_CLOSE_START . HEAD TAG_END

    HEAD  shift, and go to state 65


State 49

    5 head: head_open innerHTML head_close .

    $default  reduce using rule 5 (head)


State 50

   21 common_tag_open: COMMONTAG_OPEN_START . TAG_NAME attribute_list TAG_END

    TAG_NAME  shift, and go to state 42


State 51

   16 clause_list: clause clause_list .

    $default  reduce using rule 16 (clause_list)


State 52

   19 clause: single_tag .

    $default  reduce using rule 19 (clause)


State 53

   20 common_tag: common_tag_open innerHTML . common_tag_close

    COMMONTAG_CLOSE_START  shift, and go to state 66

    common_tag_close  go to state 67


State 54

   26 unary: p_open expr . p_close

    COMMONTAG_CLOSE_START  shift, and go to state 68

    p_close  go to state 69


State 55

   25 expr: unary .
   27 unary: p_open unary . p_close

    COMMONTAG_CLOSE_START  shift, and go to state 68

    COMMONTAG_CLOSE_START  [reduce using rule 25 (expr)]

    p_close  go to state 70


State 56

   13 attribute: ATTRIBUTE_NAME '=' ATTRIBUTE_VAL .

    $default  reduce using rule 13 (attribute)


State 57

    6 head_open: COMMONTAG_OPEN_START HEAD attribute_list TAG_END .

    $default  reduce using rule 6 (head_open)


State 58

    9 body_open: COMMONTAG_OPEN_START BODY attribute_list . TAG_END

    TAG_END  shift, and go to state 71


State 59

    4 html_close: COMMONTAG_CLOSE_START HTML . TAG_END

    TAG_END  shift, and go to state 72


State 60

   10 body_close: COMMONTAG_CLOSE_START . BODY TAG_END

    BODY  shift, and go to state 73


State 61

    8 body: body_open innerHTML body_close .

    $default  reduce using rule 8 (body)


State 62

   33 p_open: COMMONTAG_OPEN_START P attribute_list . TAG_END

    TAG_END  shift, and go to state 74


State 63

   21 common_tag_open: COMMONTAG_OPEN_START TAG_NAME attribute_list . TAG_END

    TAG_END  shift, and go to state 75


State 64

   23 single_tag: SINGLETAG_START TAG_NAME attribute_list . SINGLETAG_END

    SINGLETAG_END  shift, and go to state 76


State 65

    7 head_close: COMMONTAG_CLOSE_START HEAD . TAG_END

    TAG_END  shift, and go to state 77


State 66

   22 common_tag_close: COMMONTAG_CLOSE_START . TAG_NAME TAG_END

    TAG_NAME  shift, and go to state 78


State 67

   20 common_tag: common_tag_open innerHTML common_tag_close .

    $default  reduce using rule 20 (common_tag)


State 68

   34 p_close: COMMONTAG_CLOSE_START . P TAG_END

    P  shift, and go to state 79


State 69

   26 unary: p_open expr p_close .

    $default  reduce using rule 26 (unary)


State 70

   27 unary: p_open unary p_close .

    $default  reduce using rule 27 (unary)


State 71

    9 body_open: COMMONTAG_OPEN_START BODY attribute_list TAG_END .

    $default  reduce using rule 9 (body_open)


State 72

    4 html_close: COMMONTAG_CLOSE_START HTML TAG_END .

    $default  reduce using rule 4 (html_close)


State 73

   10 body_close: COMMONTAG_CLOSE_START BODY . TAG_END

    TAG_END  shift, and go to state 80


State 74

   33 p_open: COMMONTAG_OPEN_START P attribute_list TAG_END .

    $default  reduce using rule 33 (p_open)


State 75

   21 common_tag_open: COMMONTAG_OPEN_START TAG_NAME attribute_list TAG_END .

    $default  reduce using rule 21 (common_tag_open)


State 76

   23 single_tag: SINGLETAG_START TAG_NAME attribute_list SINGLETAG_END .

    $default  reduce using rule 23 (single_tag)


State 77

    7 head_close: COMMONTAG_CLOSE_START HEAD TAG_END .

    $default  reduce using rule 7 (head_close)


State 78

   22 common_tag_close: COMMONTAG_CLOSE_START TAG_NAME . TAG_END

    TAG_END  shift, and go to state 81


State 79

   34 p_close: COMMONTAG_CLOSE_START P . TAG_END

    TAG_END  shift, and go to state 82


State 80

   10 body_close: COMMONTAG_CLOSE_START BODY TAG_END .

    $default  reduce using rule 10 (body_close)


State 81

   22 common_tag_close: COMMONTAG_CLOSE_START TAG_NAME TAG_END .

    $default  reduce using rule 22 (common_tag_close)


State 82

   34 p_close: COMMONTAG_CLOSE_START P TAG_END .

    $default  reduce using rule 34 (p_close)
